--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "express-ejs-layouts": "^2.5.1",
-    "sweetalert2": "^11.15.10"
+    "express-ejs-layouts": "^2.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
